So Far Responsive

--- a/src/Component/Experience/Experience.css
+++ b/src/Component/Experience/Experience.css
@@ -74,8 +74,9 @@ h4{
         gap: 1rem;
     }
 
-    .experience__container >{
+    .experience__container > div{
         width: 100%;
         padding: 2rem 1rem;
     }
+
   }
