--- a/src/Component/Testimonial/Testimonal.css
+++ b/src/Component/Testimonial/Testimonal.css
@@ -39,3 +39,14 @@
 .testimonial b{
     margin-left: 40%;
 }
+
+
+  @media screen and (max-width: 600px) {
+    .testimonial{
+        width: 100%;
+    }
+
+    .testimonial b{
+        margin-left: 32%;
+    }
+  }
