--- a/src/Component/Testimonial/Testimonal.css
+++ b/src/Component/Testimonial/Testimonal.css
@@ -7,6 +7,7 @@
 .textimonal__content{
     display: grid;
     grid-template-columns: 1fr;
+    margin-bottom: 1rem;    
 
 }
 
@@ -15,6 +16,7 @@
     width: 35rem;
     padding: 2rem;
     border-radius: 2rem;
+
 }
 
 
