--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -32,15 +32,14 @@
 
 .socials{
     background: var(--color-variant);
-    /*width: 50%;
-    */padding: 1.5rem;
+    padding: 1.5rem;
     border-radius: 1rem;
     transition: var(--transition);
 }
 
 .socials:hover{
-    border: 1px solid var(--color-variant);
     background: transparent;
+    border: 1px solid var(--color-variant);
 }
 
 /* .contact__forms{
@@ -50,7 +49,6 @@
     display: grid;
     row-gap: 1rem;
     grid-template-columns: 1fr;
-    margin-bottom: 5%;
     width: 100%;
 }
 
