--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -35,7 +35,7 @@
     margin-right: 1.5rem;
     padding: 0.5rem;
     border-radius: 0.2rem;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .footer p{
@@ -50,6 +50,14 @@
 @media screen and (max-width: 1024px) {
    
     .footer ul{
-        display: block;
+        display: grid;
     }
+
+    .footer ul li{
+        margin-bottom: 1rem;
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
+
   }
