--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -42,6 +42,12 @@
     border: 1px solid var(--color-variant);
 }
 
+.socials .socials__icon{
+    width: 3rem;
+    height: 1.5rem;
+}
+
+
 /* .contact__forms{
 } */
 
